--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     "settings": {
       "clients": [
         {
-          "id": "19960222",
+          "id": "your_uuid",
           "alterId": 64
         }
       ]
